--- a/dashboard/styles/styles.css
+++ b/dashboard/styles/styles.css
@@ -337,3 +337,16 @@ progress::-moz-progress-bar {
 audio{
     width: 100%;
 }
+
+.search-container {
+    text-align: center;
+    margin: 20px 0;
+}
+
+#search-input {
+    padding: 10px;
+    width: 80%;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
