--- a/dashboard/styles/styles.css
+++ b/dashboard/styles/styles.css
@@ -271,7 +271,7 @@ progress::-moz-progress-bar {
     gap: 10px;
     margin-top: 15px;
 }
-.edit-button, .delete-button {
+.edit-button, .delete-button, .info-button {
     display: inline-block;
     padding: 8px 12px;
     text-decoration: none;
@@ -286,13 +286,19 @@ progress::-moz-progress-bar {
 .delete-button {
     background-color: #dc3545;
 }
+.info-button {
+    background-color: #00ff66;
+    color: #000000;
+}
 .edit-button:hover {
     background-color: #0056b3;
 }
 .delete-button:hover {
     background-color: #c82333;
 }
-
+.info-button:hover {
+    background-color: #11ff00;
+}
 #chapter-list {
     list-style: none;
     padding: 0;
