--- a/User/assets/style.css
+++ b/User/assets/style.css
@@ -18,7 +18,7 @@
     width: 90%;
     max-width: 1200px;
     margin: auto;
-    padding: 20px;
+    padding: 10px;
   }
   
   /* Pasek nawigacyjny */
@@ -28,7 +28,6 @@
     margin-bottom: 20px;
     display: flex;
     justify-content: center;
-    border-radius: 0 0 10px 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
     width: 100%;
     box-sizing: border-box;
@@ -37,11 +36,12 @@
   nav a {
     color: #ffffff;
     text-decoration: none;
-    margin: 0 15px;
+    margin: 0 5px;
     font-weight: bold;
     padding: 8px 12px;
     border-radius: 5px;
     transition: background-color 0.3s;
+    white-space: nowrap;
   }
   
   nav a:hover {
@@ -90,12 +90,13 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    max-width: 400px;
+    max-width: 275px;
+    min-width: 275px;
   }
   
   .book-card img {
-    width: 100px;
-    height: 150px;
+    width: 150px;
+    height: auto;
     object-fit: cover;
     border-radius: 5px;
     margin-bottom: 15px;
@@ -193,7 +194,7 @@
 
   .header-container {
     text-align: center;
-    margin: 20px 0;
+    margin: 5px 0;
   }
   
   /* Opcjonalnie możesz też ustawić, żeby input i button były inline-block */
@@ -229,6 +230,12 @@
     border-color: #3f51b5;
   }
   
+  .book-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+  }
 
   /* Responsywność */
   @media (max-width: 768px) {
@@ -238,9 +245,11 @@
     nav {
         justify-content: space-evenly;
         padding: 15px 10px;
+        font-size: 0.9em;
       }
     nav a {
-        margin: 0 5px;
+        padding: 2px 6px;
+        margin: 0px;
     }
   }
   
