--- a/User/assets/style.css
+++ b/User/assets/style.css
@@ -334,7 +334,7 @@ button:hover {
   border: none;
   background: #007bff;
   color: white;
-  padding: 10px;
+  padding: 15px;
   border-radius: 50%;
   margin: 0 10px;
   cursor: pointer;
@@ -345,11 +345,26 @@ button:hover {
   background: #0056b3;
 }
 
-.player input[type="range"] {
+input[type="range"] {
   width: 100%;
   margin-top: 10px;
+  background: #555;
+  height: 15px;
+  border-radius: 5px;
+  -webkit-appearance: none;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 20px;
+  height: 20px;
+  background: #007bff;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
+.time {
+  margin-top: 10px;
+}
 
   /* Responsywność */
   @media (max-width: 768px) {
